      handle more, do another bandwidth test.
    - New config options WarnPlaintextPorts and RejectPlaintextPorts so
      Tor can warn and/or refuse connections to ports commonly used with
      vulnerable-plaintext protocols.

  o Minor bugfixes:
    - When we setconf ClientOnly to 1, close any current OR and Dir
      listeners. Reported by mwenge.

  o Minor features:
    - Don't answer "/tor/networkstatus-bridges" directory requests if
      the request isn't encrypted.
    - Make "ClientOnly 1" config option disable directory ports too.


Changes in version 0.2.0.17-alpha - 2008-01-17
  Tor 0.2.0.17-alpha makes the tarball build cleanly again (whoops).

  o Compile fixes:
    - Make the tor-gencert man page get included correctly in the tarball.


Changes in version 0.2.0.16-alpha - 2008-01-17
  Tor 0.2.0.16-alpha adds a fifth v3 directory authority run by Karsten
  Loesing, and generally cleans up a lot of features and minor bugs.

  o New directory authorities:
    - Set up gabelmoo (run by Karsten Loesing) as the fifth v3 directory
      authority.

  o Major performance improvements:
    - Switch our old ring buffer implementation for one more like that
      used by free Unix kernels. The wasted space in a buffer with 1mb
      of data will now be more like 8k than 1mb. The new implementation
      also avoids realloc();realloc(); patterns that can contribute to
      memory fragmentation.

  o Minor features:
    - Configuration files now accept C-style strings as values. This
      helps encode characters not allowed in the current configuration
      file format, such as newline or #. Addresses bug 557.
    - Although we fixed bug 539 (where servers would send HTTP status 503
      responses _and_ send a body too), there are still servers out
      there that haven't upgraded. Therefore, make clients parse such
      bodies when they receive them.
    - When we're not serving v2 directory information, there is no reason